<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange"
    tools:context=".CriadorActivity">

    <TextView
        android:id="@+id/txt_Dados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/black"
        android:text="Dados do Criador:"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_Nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="25dp"
        android:paddingRight="20dp"
        android:text="@string/nome"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txt_Telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="25dp"
        android:paddingRight="20dp"
        android:text="@string/telefone"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txt_Local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="25dp"
        android:paddingRight="20dp"
        android:text="@string/local"
        android:textColor="@color/black" />
</LinearLayout>